--- a/.github/workflows/Code_Inspector.yml
+++ b/.github/workflows/Code_Inspector.yml
@@ -21,14 +21,14 @@ jobs:
       run: | 
         pushd ~ &> /dev/null
         git clone --depth=1 https://github.com/ejwa/codeinspector.git
-        cd gitinspector
+        cd codeinspector
         echo "export PATH=$(pwd):"'$PATH' >> ~/.profile
         popd &> /dev/null
     - name: Run codeinspector
       run: |
         source ~/.profile
         export PYTHONIOENCODING=utf-8
-        gitinspector.py --version
+        codeinspector.py --version
         echo "Running for commit : $GITHUB_SHA"
         echo "============ Code Inspector ==========="
         codeinspector.py -wTHl --format=text -f c,h,md,yml,* -x file:3_Implementation/unity -x file:doc .
