--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,97 +1,23 @@
-# Name of the project
-PROJECT_NAME = Application Calendar
+PROJ_NAME = Application_Calender
+SRC = main.c 
 
+ifdef OS
+   RM = del /q
+   FixPath = $(subst /,\,$1)
+   EXEC = exe
+else
+   ifeq ($(shell uname), Linux)
+      RM = rm -rf
+      FixPath = $1
+	  EXEC = out
+   endif
+endif
 
+build:
+	gcc $(SRC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 
-# Output directory
-BUILD = build
+run: build
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
 
-
-
-# All source code files
-SRC = Calendar.c\
-src/Calendar.c
-
-
-
-# All test source files
-TEST_SRC = src/Calendar.c\
-Test/Test_Calendar.c\
-Unity/Unity.c\
-
-
-
-TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
-
-
-
-# All include folders with header files
-INC = -Iinc\
--IUnity\
-
-
-
-#Library Inlcudes
-#if working with CUnit
-#INCLUDE_LIBS = -lcunit
-INCLUDE_LIBS =
-
-
-
-# Project Output name
-PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME).out
-
-
-
-# Document files
-DOCUMENTATION_OUTPUT = documentation/html
-
-
-
-# Default target built
-$(PROJECT_NAME):all
-
-
-
-# Run the target even if the matching name exists
-.PHONY: run clean test doc all
-
-
-
-all: $(SRC) $(BUILD)
-gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT).out
-
-
-
-# Call `make run` to run the application
-run:$(PROJECT_NAME)
-./$(PROJECT_OUTPUT).out
-
-
-
-# Document the code using Doxygen
-#doc:
-# make -C ./documentation
-
-
-
-# Build and run the unit tests
-test:$(BUILD)
-gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT)
-./$(TEST_OUTPUT)
-#Coverage
-coverageCheck:$(BUILD)
-g++ -fprofile-arcs -ftest-coverage -fPIC -O0 $(TEST_SRC) $(INC) -o $(TEST_OUTPUT)
-./$(TEST_OUTPUT)
-
-
-
-# Remove all the built files, invoke by `make clean`
 clean:
-rm -rf $(BUILD) $(DOCUMENTATION_OUTPUT)
-
-
-
-# Create new build folder if not present
-$(BUILD):
-mkdir build
+	$(RM) $(call FixPath,$(PROJ_NAME).$(EXEC))
